# amplifier-orchestration

./: .gitignore  CLAUDE.md  DISCOVERIES.md  README.md
.claude/: settings.json
ai_working/: COLLECTION_SEEDING_SUMMARY.md  phase2-change-detection-implementation.md  simple-services-implementation.md
demos/: demo-foreman-worker-orchestrator.py  demo-observers-app.py  demo-observers-orchestrator.py  demo-observers.py  pyproject.toml
demos/modules/: amplifier-module-context-persistent  amplifier-module-hooks-logging  amplifier-module-issue-manager  amplifier-module-loop-streaming  amplifier-module-orchestrator-work-coordinator  amplifier-module-provider-anthropic  amplifier-module-provider-openai  amplifier-module-tool-bash  amplifier-module-tool-filesystem  amplifier-module-tool-issue  amplifier-module-tool-web
demos/modules/amplifier-module-orchestrator-multi-context/tests/: __init__.py
demos/modules/amplifier-module-orchestrator-observers/: pyproject.toml
demos/modules/amplifier-module-orchestrator-observers/amplifier_module_orchestrator_observers/: __init__.py  config.py  orchestrator.py
demos/mount_plans/: coding-worker.json  foreman.json  observer.json  research-worker.json  researcher.json
docs/: README.md
docs/01-concepts/: mount-plans.md  overview.md  profiles.md
docs/04-advanced/: profile-lifecycle.md
working/demo-1-cli-orchestration/: .gitignore  README.md  login_auth.py
working/demo-1-cli-orchestration/modules/: amplifier-module-tool-filesystem  amplifier-module-tool-web
working/demo-1-cli-orchestration/mount_plans/: coding-worker.json  foreman.json
working/demo-2-workflow-orchestration/: .gitignore  demo.py
working/demo-2-workflow-orchestration/modules/: amplifier-module-context-persistent  amplifier-module-tool-bash
working/demo-2-workflow-orchestration/modules/amplifier-module-orchestrator-multi-context/: pyproject.toml
working/demo-2-workflow-orchestration/modules/amplifier-module-orchestrator-multi-context/amplifier_orchestrator_multi_context/: __init__.py
working/demo-2-workflow-orchestration/modules/amplifier-module-orchestrator-multi-context/tests/fixtures/: example_workflow.yaml
working/demo-3-orchestrator/: .env.example  DIAGNOSTIC_TEST_README.md  README.md  database_optimization.py  demo-cli-orchestration.py  demo-simplified-prompts.py  demo.py  demo_stubs.py  demo_worfklow-orchestration.py  diagnostic_test.py  test_auth_fix.py  test_auth_fix_quick.py  test_auth_fixes.py  test_isolated_demo.py  test_minimal_orchestrator.py  test_single_worker.py  test_worker_quick.py
working/demo-3-orchestrator/modules/: amplifier-module-context-persistent  amplifier-module-issue-manager  amplifier-module-loop-streaming  amplifier-module-orchestrator-work-coordinator  amplifier-module-provider-anthropic  amplifier-module-tool-issue  amplifier-module-tool-web
working/demo-3-orchestrator/modules/amplifier-module-orchestrator-foreman-worker/: README.md  pyproject.toml
working/demo-3-orchestrator/modules/amplifier-module-orchestrator-foreman-worker/amplifier_orchestrator_foreman_worker/: config.py  orchestrator.py
working/demo-3-orchestrator/modules/amplifier-module-orchestrator-foreman-worker/tests/: README.md  conftest.py  test_config.py  test_edge_cases.py  test_orchestrator_integration.py  test_orchestrator_unit.py
working/demo-3-orchestrator/mount_plans/: research-worker.json
working/foreman-demo/: WORKER_WORKFLOW_FIX.md  demo2.py  demo_foreman_worker.py  diagnose_worker.py  login_auth.py  password_reset.py  test_minimal_orchestrator.py  test_single_worker.py  test_worker_logs.py
working/foreman-demo-using-cli-orchestration/mount_plans/: research-worker.json
working/foreman-demo-using-multi-context-workflow-orchestrator/: README.md  database_optimization.py  demo_orchestrated.py  pyproject.toml  setup.sh  setup_modules.py
working/foreman-demo/modules/amplifier-module-orchestrator-foreman-worker/: pyproject.toml
working/foreman-demo/modules/amplifier-module-orchestrator-foreman-worker/amplifier_orchestrator_foreman_worker/: __init__.py  config.py
working/foreman-demo/mount_plans/: research-worker.json
(+32 files in other folders)
