[project]
name = "amplifier-module-orchestrator-observers"
version = "0.1.0"
description = "Observer pattern orchestrator for Amplifier - bottom-up feedback loops"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
orchestrator-observers = "amplifier_module_orchestrator_observers:ObserverOrchestrator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_orchestrator_observers"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
